--- a/views/mistrabajos.html
+++ b/views/mistrabajos.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Keywords" lang="es"
         content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetacion web, CSS3, FIGMA, JAVASCRIPT" />
     <meta name="description" lang="es"
         content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y formacion constante." />
-    <title> Evelyn - Diseñadora Web</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet">
+    <title>Evelyn - Diseñadora Web</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
@@ -26,15 +26,15 @@
     </script>
     <script src="https://kit.fontawesome.com/41f3ad639c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Recursive&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <h2 class="nombre_logo"> evelyn. </h2>
+            <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,56 +64,44 @@
         <a class="d-none d-md-block" href="#"><i class="fa fa-github"></i></a>
         <a class="d-none d-md-block" href="#"><i class="fa fa-linkedin"></i></a>
     </nav>
-    <div class="container">
-        <div>
-            <h1 class="text-center mt-5 mb-5 proyecto"> <strong>
-                    Trabajos realizados
-            </h1>
-            <div class="row text-center servicios">
-                <div class="col-md-4">
 
-                    <img class="trabajos" src="../img/eliseoconte.png" class="card-img-top" alt="...">
-                </div>
-                <div class="col-md-4">
-                    <img class="trabajos" src="../img/Holamatt.png" class="card-img-top" alt="...">
-                </div>
-                <div class="col-md-4">
-                    <img class="trabajos" src="../img/aliciaferrado.png" class="card-img-top" alt="...">
-                </div>
+    <div class="section-title">
+        <h2 class="text-center habilidades">Portfolio</h2>
+        <hr />
+    </div>
 
-                <div class="col-md-4">
-                    <img class="trabajos" src="../img/birrestop.png" class="card-img-top" alt="...">
-                </div>
-                <div class="col-md-4">
-                    <img class="trabajos" src="../img/ivanp.png" class="card-img-top" alt="...">
-                </div>
-                <div class="col-md-4">
-                    <img class="trabajos" src="../img/itsolutions.png" class="card-img-top" alt="...">
-                </div>
-            </div>
+    <div class="gallery mr-5 ml-5 imagen1" id="gallery">
+        <div class="mb-3 pics animation all 2 imagen1">
+            <img class="img-fluid imagen1" src="../img/proyecto12.jpg" alt="Card image cap" />
+        </div>
+
+        <div class="mb-3 pics animation all 1">
+            <img class="img-fluid imagen2" src="../img/proyecto5.jpg" alt="Card image cap" />
+        </div>
+
+        <div class="mb-3 pics animation all 1">
+            <img class="img-fluid" src="../img/proyecto4.jpg" alt="Card image cap" />
+        </div>
+
+        <div class="mb-3 pics animation all 2">
+            <img class="img-fluid" src="../img/proyecto8.jpg" alt="Card image cap" />
+        </div>
+
+        <div class="mb-3 pics animation all 2">
+            <img class="img-fluid" src="../img/proyecto6.jpg" alt="Card image cap" />
+        </div>
+
+        <div class="mb-3 pics animation all 1">
+            <img class="img-fluid" src="../img/proyecto7.jpg" alt="Card image cap" />
         </div>
     </div>
+
     <footer class="mt-5">
         <div class="row">
-            <div class="col-lg-6 col-md-6 padd">
-                <i class="far fa-envelope iconofooter"></i>
-                <h4 class="footerdatos">evebonato23@gmail.com</h4>
-
-                </a>
-            </div>
-            <div class="col-lg-6 col-md-6 local">
-                <i class="fas fa-map-marker-alt iconofooter"></i>
-                <h4 class="footerdatos">Entre Rios - Argentina</h4>
-
-                </a>
+            <div class="footer-copyright text-center py-3 col-lg-12 col-md-12">
+                © 2020 Hecho por Evelyn <i class="fas fa-heart"></i>
             </div>
         </div>
-        <div class="row">
-            <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
-                    class="fas fa-heart"></i>
-            </div>
-        </div>
-
     </footer>
 </body>
 
