--- a/views/sobremi.html
+++ b/views/sobremi.html
@@ -37,7 +37,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <h2 class="nombre_logo"> evelyn. </h2>
+            <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,46 +71,34 @@
     <section>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 order-lg-2">
-                    <div>
-                        <img class="img-fluid" src="../img/imagenperfil.png" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-6 order-lg-1">
+
+                <div class="col-lg-6">
                     <div class="p-5">
-                        <h1 class="display-4 text-center  texto_quiensoy">¿Quien soy?</h1>
-                        <p class=" texto_quiensoy">Me llamo Evelyn, soy Argentina , nacida en la
-                            provincia de Entre
-                            Rios. Me
-                            encanta
-                            el diseño Web. Amo viajar y cada lugar que visito se vuelve inspiracion para mi.
-                            Me estoy formado a través de cursos online en academias y de manera autodidacta.
-                            Mi principal objetivo es la mejora continua de los proyectos y la creacion de experiencias
+                        <h1 class="display-4 texto_quiensoy">¿Quien soy?</h1>
+                        <p class="descripcion_quiensoy mt-3">Me llamo Evelyn, soy Argentina , nacida en Entre
+                            Rios.
+                            Me considero una persona comprometida en la mejora continua y en la creacion de experiencias
                             de usuarios dinamicas y
                             accesibles.
-                            Siempre dispuesta a nuevos desafios y ser eficiente y resolutiva es mi mayor propósito.
+                            Siempre dispuesta a nuevos desafios y ser resolutiva es mi mayor
+                            propósito. Constantemente
+                            estoy
+                            formandome y capacitandome en las ultimas tendencias para poder brindar las mejores
+                            herramientas en mi trabajo.</p>
 
-                            Quisiera invitarte a que nos contactemos y hagamos algo especial.</p>
+                        <p class="descripcion_quiensoy">Contactame y hagamos algo especial. </p>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div>
+                        <img class="img-fluid imagensobremi" src="../img/imagenperfil.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <footer class="mt-5">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 padd">
-                <i class="far fa-envelope iconofooter"></i>
-                <h4 class="footerdatos">evebonato23@gmail.com</h4>
 
-                </a>
-            </div>
-            <div class="col-lg-6 col-md-6 local">
-                <i class="fas fa-map-marker-alt iconofooter"></i>
-                <h4 class="footerdatos">Entre Rios - Argentina</h4>
-
-                </a>
-            </div>
-        </div>
         <div class="row">
             <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
                     class="fas fa-heart"></i>
