--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   color: black;
   background-color: white; }
 
@@ -17,8 +16,8 @@ body {
     font-size: 1em; }
   .navbar .nombre_logo {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.4em;
-    opacity: 0.9;
+    font-size: 1.6em;
+    opacity: 0.8;
     font-weight: bold;
     margin-left: 0.4em; }
 
@@ -57,13 +56,10 @@ body {
     margin-bottom: 1em;
     color: #000;
     border: none;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     outline: none;
     margin-top: 2em; }
   .banner .banner_button:hover {
-    background-color: peachpuff;
-    box-shadow: 0px 15px 20px gray;
     color: #ffddcc;
     transform: translateY(-7px);
     text-decoration: none; }
@@ -93,38 +89,9 @@ span img:hover {
   margin-top: 1.5em;
   margin-bottom: 0.5em; }
 
-.descripcion_servicios {
-  margin-bottom: 2; }
-
-.imagenservicios1 {
-  width: 17em;
-  border: bisque solid 3px; }
-
-.imagenservicios2 {
-  width: 17em;
-  border: bisque solid 3px; }
-
-.imagenservicios3 {
-  width: 17em;
-  border: bisque solid 3px; }
-
-.iconoresponsive {
-  margin-top: 1em;
-  color: sandybrown; }
-
-h1 {
-  color: black; }
-
-.text-muted {
-  margin-bottom: 2em;
-  margin-top: 2em;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: lighter;
-  color: #ff914d; }
-
 .imagenHabilidad {
-  padding: 1.5em;
-  width: 17em;
+  padding: 1.2em;
+  width: 15em;
   height: 13em;
   -webkit-transition: 1s linear;
   transition: 1s linear;
@@ -133,32 +100,44 @@ h1 {
   transition-property: background-color, border-radius;
   transition-duration: 1s; }
 
+.habilidades1 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: black;
+  opacity: 0.7;
+  font-weight: bold; }
+
 .imagenHabilidad:hover {
   border-radius: 75px;
   background-color: gray; }
 
 .habilidades {
-  font-size: 3em;
+  font-size: 2.6em;
   margin: 0%;
   margin-top: 1em;
-  margin-bottom: 1em;
-  color: peru !important; }
+  color: black !important;
+  font-family: 'Poppins', sans-serif;
+  opacity: 0.8;
+  font-weight: lighter; }
 
-.cuadradocolor {
-  background-color: plum; }
+.gallery {
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%; }
 
-.trabajos {
-  height: 17em;
-  width: 100%;
-  -webkit-transition: 1s linear;
-  transition: 1s linear;
-  -webkit-box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
-  box-shadow: 20px 10px 14px 2px rgba(0, 0, 0, 0.47);
-  padding: 2em;
-  transition-property: background-color, border-radius;
-  transition-duration: 1s;
-  margin-bottom: 3em;
-  margin-top: 3em; }
+.gallery .pics {
+  -webkit-transition: all 350ms ease;
+  transition: all 350ms ease; }
+
+.gallery .animation {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1); }
+
+.img-fluid {
+  margin-top: 5em; }
 
 footer {
   float: none;
@@ -172,47 +151,26 @@ footer {
   height: 5em;
   bottom: 0;
   left: 0; }
-  footer .footer-links {
-    float: none;
-    text-align: center;
-    align-items: center;
-    color: rgba(0, 0, 0, 0.8); }
-  footer .footer-links a {
-    float: none;
-    text-align: center;
-    color: black;
-    opacity: 0.9;
-    text-decoration: none;
-    font-size: 24px;
-    padding: 0px 10px; }
-  footer .footer-links a:hover {
-    opacity: 1; }
-  footer .footer .fa-heart {
-    color: #D23333; }
   footer .iconofooter {
     font-size: 2em;
     color: gray;
     margin-top: 0em; }
-  footer .footerdatos {
-    font-size: 1.5em;
-    font-family: 'Open Sans Condensed', sans-serif;
-    margin-bottom: 0%; }
 
-.formularioconsulta {
-  background-image: url(../img/elfial.png);
-  background-size: cover;
-  padding: 0.5em 0; }
-  .formularioconsulta .contactame {
-    color: peru;
-    font-family: 'Open Sans Condensed', sans-serif; }
-  .formularioconsulta h2 {
+.form {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 1.4em; }
+  .form .formdatos {
+    font-size: 1.4em;
+    font-family: 'Poppins', sans-serif;
+    opacity: 0.7; }
+  .form h2 {
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 4em;
     opacity: 0.8; }
-  .formularioconsulta .botoncontacto {
+  .form .botoncontacto {
     font-family: 'Open Sans Condensed', sans-serif;
     letter-spacing: 0.1em;
-    font-size: 1.5em;
+    font-size: 1em;
     border: none;
     width: 8em;
     border-radius: 1em;
@@ -220,24 +178,43 @@ footer {
     margin-bottom: 1em;
     color: #000;
     border: none;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     outline: none;
     margin-top: 1em; }
 
 .texto_quiensoy {
-  opacity: 0.8; }
+  text-align: center;
+  opacity: 0.8;
+  font-family: 'Poppins', sans-serif;
+  color: black;
+  font-size: 3em; }
+
+.descripcion_quiensoy {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 1.3em;
+  color: black; }
 
 .proyecto {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 3em;
   font-weight: lighter;
-  margin-bottom: 5em;
-  color: peru; }
+  margin-top: 1em;
+  color: black;
+  opacity: 0.8; }
+
+hr {
+  color: black;
+  width: 10em;
+  height: 1em;
+  margin-bottom: 2em; }
+
+.letrav {
+  color: #ffddcc;
+  font-weight: bold; }
 
 @media screen and (max-width: 800px) {
   body {
-    margin: 0%; }
+    margin: 0; }
   .banner {
     margin: 0%;
     font-size: 0.6em;
@@ -257,4 +234,14 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around; } }
+    justify-content: space-around; }
+  .gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%; }
+  .btn.filter {
+    padding-left: 1.1rem;
+    padding-right: 1.1rem; } }
