--- a/views/contacto.html
+++ b/views/contacto.html
@@ -34,10 +34,10 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="contact">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <h2 class="nombre_logo"> evelyn. </h2>
+            <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,50 +68,71 @@
         <a class="d-none d-md-block" href="#"><i class="fa fa-linkedin"></i></a>
     </nav>
 
-    <div class="formularioconsulta">
-        <div class="container">
-            <h1 class=" mt-5 mb-5 contactame" style="text-align: center;">Contactame</h1>
-            <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                <div class="row align-items-stretch mb-5">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Nombre</label>
-                            <input class="form-control" id="name" type="text" placeholder="..." />
+    <h1 class="habilidades" style="text-align: center;">Contactame</h1>
+    <hr>
+    <div class="container form">
+        <div class="row mt-5">
+
+            <div class="col-lg-4">
+                <div class="info">
+                    <div class="address">
+                        <h4 class="formdatos">Localización
+                        </h4>
+                        <p>Entre Rios - Argentina</p>
+                    </div>
+
+                    <div class="email">
+                        <h4 class="formdatos">Mail</h4>
+                        <p>evebonato23@gmail.com</p>
+                    </div>
+
+                    <div class="phone">
+                        <h4 class="formdatos">Teléfono</h4>
+                        <p>3442654856</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-8 mt-5 mt-lg-0">
+                <form>
+                    <div class="form-row form">
+                        <div class="col-md-6 mb-3 ">
+                            <input type="text" name="name" class="form-control form1" id="name" placeholder="Nombre" />
+
                         </div>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email</label>
-                            <input class="form-control" id="name" type="text" placeholder="..." />
+                        <div class="col-md-6">
+                            <input type="email" class="form-control form1" name="email" id="email" placeholder="Mail" />
+
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <label for="exampleInputEmail1">Dejame tu mensaje</label>
-                        <div class="form-group form-group-textarea">
-                            <textarea class="form-control" style="height: 7.7em;" id="message"
-                                placeholder="....."></textarea>
-                        </div>
+                    <label class="my-1 mr-2 mt-3 form1">¿En que podría ayudarte?</label>
+                    <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+                        <option selected>Presupuestos</option>
+                        <option value="1">Diseno Web</option>
+                        <option value="2">Wordpress</option>
+                        <option value="3">Consultas generales</option>
+                    </select>
+                    <div class="form-group mt-4">
+                        <textarea class="form-control form1" name="message" rows="5"
+                            data-msg="Please write something for us" placeholder="Dejame tu mensaje"></textarea>
                     </div>
-                </div>
-                <div class="text-center">
-                    <button type="button" class="btn btn-secondary mb-5 botoncontacto ">Enviar consulta</button>
-                </div>
-            </form>
+
+                    <div class="text-center">
+                        <button type="button" class="btn btn-secondary mb-5 botoncontacto ">Enviar
+                            consulta</button>
+                    </div>
+                </form>
+
+            </div>
+
         </div>
+
+    </div>
+
     </div>
     <footer class="mt-5">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 padd">
-                <i class="far fa-envelope iconofooter"></i>
-                <h4 class="footerdatos">evebonato23@gmail.com</h4>
 
-                </a>
-            </div>
-            <div class="col-lg-6 col-md-6 local">
-                <i class="fas fa-map-marker-alt iconofooter"></i>
-                <h4 class="footerdatos">Entre Rios - Argentina</h4>
-
-                </a>
-            </div>
-        </div>
         <div class="row">
             <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
                     class="fas fa-heart"></i>
