--- a/views/habilidades.html
+++ b/views/habilidades.html
@@ -36,7 +36,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <h2 class="nombre_logo"> evelyn. </h2>
+            <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,48 +66,38 @@
         <a class="d-none d-md-block" href="#"><i class="fa fa-github"></i></a>
         <a class="d-none d-md-block" href="#"><i class="fa fa-linkedin"></i></a>
     </nav>
+
+
     <h1 class="text-muted habilidades" style="text-align: center;">Habilidades técnicas</h1>
+    <hr>
     <div class="row text-center">
         <div class="col-md-4">
             <img class="imagenHabilidad mt-5" src="../img/js.png" class="card-img-top" alt="...">
-            <h4 class="my-3">JavaScript</h4>
+            <h4 class="my-3 habilidades1">JavaScript</h4>
         </div>
         <div class="col-md-4">
             <img class="imagenHabilidad mt-5" src="../img/react.png" class="card-img-top" alt="...">
-            <h4 class="my-3">React</h4>
+            <h4 class="my-3 habilidades1">React</h4>
         </div>
         <div class="col-md-4">
             <img class="imagenHabilidad mt-5" src="../img/sass.png" class="card-img-top" alt="...">
-            <h4 class="my-3">Sass</h4>
+            <h4 class="my-3 habilidades1">Sass</h4>
         </div>
         <div class="col-md-4">
             <img class="imagenHabilidad mt-5" src="../img/figma.png" class="card-img-top" alt="...">
-            <h4 class="my-3">Figma</h4>
+            <h4 class="my-3 habilidades1">Figma</h4>
         </div>
         <div class="col-md-4">
             <img class="imagenHabilidad mt-5" src="../img/wordpress.png" class="card-img-top" alt="...">
-            <h4 class="my-3">Wordpress</h4>
+            <h4 class="my-3 habilidades1">Wordpress</h4>
         </div>
         <div class="col-md-4">
-            <img class="imagenHabilidad mt-5" src="../img/ux-ui-logo.png" class="card-img-top" alt="...">
-            <h4 class="my-3">Ux/Ui</h4>
+            <img class="imagenHabilidad mt-5" src="../img/bootstrap.png" class="card-img-top" alt="...">
+            <h4 class="my-3 habilidades1">Bootstrap</h4>
         </div>
     </div>
     <footer class="mt-5">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 padd">
-                <i class="far fa-envelope iconofooter"></i>
-                <h4 class="footerdatos">evebonato23@gmail.com</h4>
 
-                </a>
-            </div>
-            <div class="col-lg-6 col-md-6 local">
-                <i class="fas fa-map-marker-alt iconofooter"></i>
-                <h4 class="footerdatos">Entre Rios - Argentina</h4>
-
-                </a>
-            </div>
-        </div>
         <div class="row">
             <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
                     class="fas fa-heart"></i>
